updated css html added fonts and fixed alignment

--- a/css-two-column-layout/styles.css
+++ b/css-two-column-layout/styles.css
@@ -3,8 +3,9 @@
 }
 
 .container {
-  max-width: 900px;
   margin: auto;
+  width: 100%;
+  height: 500px;
 }
 
 .row {
@@ -12,8 +13,6 @@
   font-family: Karla, sans-serif;
   font-style: normal;
   font-weight: bold;
-  margin-right: 20px;
-  margin-left: 20px;
 }
 
 .col-row {
@@ -22,46 +21,58 @@
   font-weight: 400;
   display: flex;
   flex-wrap: wrap;
-  margin: 15px;
-}
-
-.main-container {
-  margin: 15px;
-}
-
-.less-container {
-  width: 91%;
-  padding-left: 100px;
 }
 
 .col-whole {
-  align-content: center;
-  margin: auto;
   font-weight: bold;
 }
 
 .biggest-text {
-  font-size: 25px;
+  font-size: 70px;
+  font-family: Karla, sans-serif;
+  font-style: normal;
+  font-weight: 700;
 }
 
 .margin-top {
-  margin-top: 60px;
+  margin-top: 70px;
 }
 
 p {
   font-family: Karla, sans-serif;
   font-style: normal;
   font-weight: 400;
+  color: rgb(135 135 135);
+  font-size: 20px;
+}
+
+h1,
+h3 {
+  font-family: Karla, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+}
+
+.header-marg {
+  padding-bottom: 40px;
+}
+
+.width {
+  margin-left: 20%;
 }
 
 .half-columns {
-  margin: 30px;
-  padding: 10px;
   display: flex;
+  margin-left: 12%;
+}
+
+.text-align-center {
+  text-align: center;
 }
 
 .button-marg {
-  margin-top: 30px;
+  margin-top: 40px;
   text-align: center;
 }
 
@@ -76,4 +87,44 @@ button {
   font-style: normal;
   font-size: 18px;
   font-weight: bold;
+}
+
+.col-1 {
+  max-width: 10%;
+}
+
+.col-2 {
+  max-width: 20%;
+}
+
+.col-3 {
+  max-width: 30%;
+}
+
+.col-4 {
+  max-width: 40%;
+}
+
+.col-5 {
+  max-width: 50%;
+}
+
+.col-6 {
+  max-width: 60%;
+}
+
+.col-7 {
+  max-width: 70%;
+}
+
+.col-8 {
+  max-width: 80%;
+}
+
+.col-9 {
+  max-width: 90%;
+}
+
+.col-10 {
+  max-width: 100%;
 }
